<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:andorid="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity"
    android:background="@color/purple_700"

    >


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="423dp"
        android:layout_height="287dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/todo"
        andorid:layout_constraintBottom_toBottomOf="parent"
        andorid:layout_constraintEnd_toEndOf="parent"
        andorid:layout_constraintStart_toStartOf="parent"
        andorid:layout_constraintTop_toTopOf="parent"
        andorid:layout_constraintVertical_bias="1.0"
        andorid:srcCompat="@drawable/art2"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded"
        android:text="@string/text_view"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="center"
        android:textStyle="bold"
        andorid:layout_constraintBottom_toTopOf="@+id/username"
        andorid:layout_constraintEnd_toEndOf="parent"
        andorid:layout_constraintStart_toStartOf="parent"
        andorid:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="326dp"
        android:layout_height="61dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="103dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="#757575"
        andorid:layout_constraintBottom_toTopOf="@+id/email"
        andorid:layout_constraintEnd_toEndOf="parent"
        andorid:layout_constraintHorizontal_bias="0.507"
        andorid:layout_constraintStart_toStartOf="parent"
        andorid:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email"
        android:layout_width="326dp"
        android:layout_height="62dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="103dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="#757575"
        andorid:layout_constraintBottom_toTopOf="@+id/password"
        andorid:layout_constraintEnd_toEndOf="parent"
        andorid:layout_constraintHorizontal_bias="0.515"
        andorid:layout_constraintStart_toStartOf="parent"
        andorid:layout_constraintTop_toBottomOf="@+id/username"
        android:autofillHints="" />

    <EditText
        android:id="@+id/diabetes"
        android:layout_width="327dp"
        android:layout_height="60dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="103dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:hint="@string/diabetes_y_n"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="#757575"
        andorid:layout_constraintBottom_toTopOf="@+id/register_button"
        andorid:layout_constraintEnd_toEndOf="parent"
        andorid:layout_constraintHorizontal_bias="0.396"
        andorid:layout_constraintStart_toStartOf="parent"
        andorid:layout_constraintTop_toBottomOf="@+id/spinner_diet"
        android:autofillHints="" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="159dp"
        android:text="@string/register"
        android:textColor="#880E4F"
        andorid:layout_constraintBottom_toTopOf="@+id/imageView4"
        andorid:layout_constraintEnd_toEndOf="parent"
        andorid:layout_constraintStart_toStartOf="parent"
        andorid:layout_constraintTop_toBottomOf="@+id/diabetes"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="330dp"
        android:layout_height="59dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="103dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:hint="@string/enter_password_register"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="#757575"
        andorid:layout_constraintBottom_toTopOf="@+id/spinner_diet"
        andorid:layout_constraintEnd_toEndOf="parent"
        andorid:layout_constraintHorizontal_bias="0.462"
        andorid:layout_constraintStart_toStartOf="parent"
        andorid:layout_constraintTop_toBottomOf="@+id/email"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/spinner_diet"
        android:layout_width="326dp"
        android:layout_height="54dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="68dp"
        android:background="@drawable/rounded"
        andorid:layout_constraintBottom_toTopOf="@+id/diabetes"
        andorid:layout_constraintEnd_toEndOf="parent"
        andorid:layout_constraintHorizontal_bias="0.421"
        andorid:layout_constraintStart_toStartOf="parent"
        andorid:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="159dp"
        android:text="@string/login"
        android:textColor="#F1ECEF"
        andorid:layout_constraintBottom_toBottomOf="parent"
        andorid:layout_constraintEnd_toEndOf="parent"
        andorid:layout_constraintStart_toStartOf="parent"
        andorid:layout_constraintTop_toBottomOf="@+id/register_button"
        andorid:layout_constraintVertical_bias="0.076"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="151dp"
        android:layout_height="41dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/rounded"
        android:text="@string/already_have_account"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/textColor2"
        andorid:layout_constraintBottom_toTopOf="@+id/login_button"
        andorid:layout_constraintEnd_toEndOf="parent"
        andorid:layout_constraintStart_toStartOf="parent"
        andorid:layout_constraintTop_toBottomOf="@+id/register_button"
        andorid:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>