<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/start"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="323dp"
        android:layout_height="237dp"
        android:layout_marginTop="260dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="332dp"
        android:layout_height="62dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded"
        android:text="@string/welcome_to_your_fit_n_journey"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="center"
        android:textColor="@color/textColor2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/begin_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/begin_button"
        android:layout_width="243dp"
        android:layout_height="81dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="55dp"
        android:background="#CF9F10"
        android:text="@string/lets_begin"
        android:textColor="@color/textColor2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>